Revision history for Ocsinventory::Agent

       * New Snmp/231.pm module for Fujistu devices
       * postinst.pl can now be launched in non-interactive mode using new "--nowizard" launch option
       * Adding all the configuration options as launching arguments in postinst.pl
       * Adding new interactive questions about "debug", "logfile", "ssl" and "ca" configuration options in postinst.pl
       * Download.pm uses LWP useragent initiated by Network.pm for SSL checks 
       * Download.pm uses LWP useragent initiated by Network.pm for info and frags files downloads
       * Network.pm can use LWP version 6 SSL useragent options
       * New --ca configuration option to specify a CA certificate path for SSL certificate checks 
       * New --ssl configuration option to enable/disable SSL certificate checks 
       * Customize SNMP scans using a special XML format received from server 
       * Getting network devices MAC address during SNMP scans
       * Availibity to scan any networks SNMP devices using nmap or ping scans
       * SNMP v3 available for SNMP scans
       * Add new --ssl configuration option to enable or disable certificate check during SSL communications
       * Change 'SERIAL' field name and add checksum for inventory XML CPUS section 
       * Now getting MANUFACTURER and SERIALNUMBER in Snmp/3375.pm
       * Add new fields in setSnmpLoadBalancer() method in Common.pm

2.0.x
       * Add new MacOS/Controller.pm module to get controllers inventory under MacOSX
       * Add new MacOS/Slots.pm module to get slots inventory under MacOSX
       * Add missing DESCRIPTION field in addController() in Common.pm
       * Set debug and lazy options to 0, in generated ocsinventory-agent.cfg file by macOSX graphic installer, if check boxes are not selected
       * Add a new configuration option to set lazy mode in MacOSX graphic installer 
       * Improve MacOSX postinstall script to able to deploy MacOSX agent using NetInstall      

2.0.5